--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@quasar/extras": "^1.13.4",
     "@vueuse/core": "^8.7.5",
+    "axios": "^0.27.2",
+    "moment": "^2.29.3",
+    "pinia": "^2.0.12",
     "quasar": "^2.6.2",
     "vue": "^3.2.37",
+    "vue-axios": "^3.4.1",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
