--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   },
   "files.associations": {
     "*.css": "postcss"
-  }
+  },
+  "vue3snippets.enable-compile-vue-file-on-did-save-code": false
 }
