--- a/package.json
+++ b/package.json
@@ -10,36 +10,36 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@quasar/extras": "^1.13.4",
-    "@vueuse/core": "^8.7.5",
+    "@lottiefiles/lottie-player": "^1.5.7",
+    "@quasar/extras": "^1.15.1",
+    "@vueuse/core": "^9.1.0",
     "axios": "^0.27.2",
-    "moment": "^2.29.3",
-    "pinia": "^2.0.12",
-    "quasar": "^2.6.2",
+    "moment": "^2.29.4",
+    "pinia": "^2.0.17",
+    "quasar": "^2.7.7",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.1.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.2",
-    "@iconify-json/carbon": "^1.1.5",
-    "@quasar/vite-plugin": "^1.0.7",
-    "@types/node": "^18.0.0",
-    "@unocss/reset": "^0.39.3",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/test-utils": "^2.0.1",
-    "eslint": "^8.18.0",
+    "@iconify-json/carbon": "^1.1.7",
+    "@quasar/vite-plugin": "^1.1.1",
+    "@unocss/reset": "^0.45.5",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "@vue/test-utils": "^2.0.2",
+    "eslint": "^8.21.0",
     "jsdom": "^20.0.0",
-    "pnpm": "^7.3.0",
-    "sass": "^1.32.0",
+    "pnpm": "^7.8.0",
+    "sass": "^1.54.3",
     "typescript": "^4.7.4",
-    "unocss": "^0.39.3",
-    "unplugin-auto-import": "^0.9.1",
-    "unplugin-vue-components": "^0.20.0",
-    "vite": "^2.9.12",
-    "vite-plugin-pages": "^0.24.2",
-    "vitest": "^0.16.0",
-    "vue-tsc": "^0.38.1"
+    "unocss": "^0.45.5",
+    "unplugin-auto-import": "^0.11.0",
+    "unplugin-vue-components": "^0.22.0",
+    "vite": "^3.0.4",
+    "vite-plugin-pages": "^0.25.0",
+    "vitest": "^0.21.0",
+    "vue-tsc": "^0.39.4"
   },
   "eslintConfig": {
     "extends": "@antfu"
