--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@lottiefiles/lottie-player": "^1.5.7",
     "@quasar/extras": "^1.15.1",
     "@types/greensock": "^1.15.32",
     "@vueuse/core": "^9.1.0",
@@ -21,7 +20,8 @@
     "quasar": "^2.7.7",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vue3-lottie": "^2.2.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.2",
