--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "packageManager": "pnpm@9.6.0",
+  "type": "module",
   "scripts": {
     "build": "vite build",
     "dev": "set VITE_API_URL=http://localhost:9009&&vite --port 3333 --open",
